Templates: fix the BulkAction header, and more responsive tweaks (#840)
* Forms: prevent the input zoom-in effect that happens on mobile devices

* Forms: larger font size for labels on small screens

* Forms: tweak the phone input size on small screens

* Forms: prevent input focus highlight for readonly fields

* Templates: fix overlapping breadcrumbs when not logged in

* Theme: change the default badge colour to purple

* Forms: update the BulkActionForm to use the FormView renderer

* Forms: fix the bulk action form header placement

* Theme: remove unused BulkActionForm css

--- a/resources/assets/css/theme.scss
+++ b/resources/assets/css/theme.scss
@@ -85,7 +85,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 }
 
 .badge {
-    @apply absolute z-10 rounded-full bg-blue-400 text-xs text-white no-underline leading-tight font-sans;
+    @apply absolute z-10 rounded-full bg-purple-400 text-xs text-white no-underline leading-tight font-sans;
     padding: 2px 6px 2px 6px;
 }
 
@@ -139,6 +139,10 @@ input:focus, select:focus, textarea:focus {
     
 }
 
+input[readonly]:focus, select[readonly]:focus, textarea[readonly]:focus {
+    @apply shadow-none;
+}
+
 .column.inline {
     @apply flex flex-wrap ;
 }
@@ -150,11 +154,18 @@ input:focus, select:focus, textarea:focus {
 }
 
 .column.inline.displayNone {
-    display: none;
+    @apply hidden;
 }
 
 .column.stacked {
     @apply flex flex-col justify-end items-stretch content-center;
+}
+
+/* Prevent the input zoom-in effect that happens on mobile devices */
+@media (max-width: 767px) {
+    input, select, option, textarea {
+        font-size: initial !important;
+    }
 }
 
 /*
